[package]
name = "wgpu_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
bytemuck = { version = "1.4", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.9.0"
futures = "0.3.21"
gfx-hal = "0.9.0"
image = "0.24.2"
log = "0.4.17"
pollster = "0.2.5"
rand = "0.8.5"
wgpu = "0.12.0"
winit = "0.26.1"
